removi a margin bottom dos registros

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,7 +116,7 @@
         <!-- /Statistics -->
 
         <!-- Registers -->
-        <section class="container mt-3 mb-5" id="registers">
+        <section class="container mt-3" id="registers">
 
             <h3>Registros</h3>
         
